2003-11-03  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Bootstrap.pm, Engine.pm, FinkVersion.pm.in, NetAccess.pm,
	PkgVersion.pm, SelfUpdate.pm: just being pedantic, updating
	our external calls to system versions, for safety.

2003-11-03  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Config.pm: Bomb if Distribution isn't set.

2003-11-02  Daniel Macks  <dmacks@users.sourceforge.net>

	* Validation.pm: Add polite feedback if a .deb is okay in analogy
	to behavior for .info (cf. exiting silently). (Patch #822456)

2003-10-29  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: check for threaded X, and check for the file
	before trying to read the xterm man page.

2003-10-25  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* VirtPackage.pm: make system-xfree86 virtual complain if you're
	missing important SDK bits.  =)
    
2003-10-25  Mohammad A. Haque  <batmanppc@users.sourceforge.net>

	* Engine.pm: Patch 828653 fix fink cleanup and improve user feedback
    
2003-10-25  Justin F. Hallett  <thesin@users.sourceforge.net

	* Service.pm: Added an get_path function that is a perl version
	of the command util which, you give it a file name and it returns
	the first match in the path of that file with it's full path.
	* PkgVersion.pm: Changed which call in for perl$version to use
	new get_path function.

2003-10-24  Benjamin Reed  <rangerrick@users.sourceforge.net

	* SelfUpdate.pm: Modify the rsync command to only remove
	CVS directories in trees that are updated through rsync.

2003-10-23  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* SelfUpdate.pm: Modify the "point" selfupdate method so that the
	version number information which it retrieves from the Fink
	website is specific to which distribution is the current one
	(e.g., whether we are running 10.2 or 10.2-gcc3.3).

2003-10-21  Justin F. Hallett  <thesin@users.sourceforge.net>

	* PkgVersion.pm: Fixed a problem with perlmodules where when